--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,54 +1,56 @@
-
 .hero {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left {
+  padding: 2rem;
+  padding-top: 1.5rem;
+  flex: 3;
+  display: flex;
+  gap: 2rem;
+  flex-direction: column;
+}
+
+.right {
+  flex: 1;
+}
+
+.advertisement {
+  margin-top: 4rem;
+  background-color: #363d42;
+  border-radius: 4rem;
+  width: fit-content;
+  padding: 20px 13px;
+  text-transform: uppercase;
+  color: white;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.advertisement > span {
+  z-index: 2;
+}
+
+.advertisement > div {
+  position: absolute;
+  background-color: var(--orange);
+  width: 5.4rem;
+  height: 80%;
+  left: 8px;
+  border-radius: 3rem;
+  z-index: 1;
+}
+
+.hero-text {
     display: flex;
-    justify-content: space-between;
-  }
-  
-  .left {
-    padding: 2rem;
-    padding-top: 1.5rem;
-    flex: 3;
-    display: flex;
-    gap: 2rem;
     flex-direction: column;
-  }
-  
-  .right {
-    flex: 1;
-  }
-  
-  .advertisement {
-      margin-top: 4rem;
-      background-color: #363d42;
-      border-radius: 4rem;
-      width: fit-content;
-      padding: 20px 13px;
-      text-transform: uppercase;
-      color: white;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-  }
-  .advertisement>span {
-      z-index: 2;
-  }
-  .advertisement>div {
-      position: absolute;
-      background-color: var(--orange);
-      width: 5.4rem;
-      height: 80%;
-      left: 8px;
-      border-radius: 3rem;
-      z-index: 1;
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+    gap: 1rem;
+    text-transform: uppercase;
+    font-size: 4.5rem;
+    font-weight: bold;
+    color: white;
+    text-overflow: inherit;
+}
