--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   gap: 6rem;
   overflow: hidden;
+  min-height: 100vh;
 }
 
 ::-webkit-scrollbar {
@@ -36,6 +37,9 @@
   font-weight: bold;
   border: 4px solid transparent;
   transition: 300ms all;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn:hover {
