--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -14,10 +14,11 @@
 
 .right {
   flex: 1;
+  position: relative;
+  background: linear-gradient(to left, var(--orange), var(--gray));
 }
 
 .advertisement {
-  margin-top: 4rem;
   background-color: #363d42;
   border-radius: 4rem;
   width: fit-content;
@@ -45,50 +46,95 @@
 }
 
 .hero-text {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    text-transform: uppercase;
-    font-size: 4.5rem;
-    font-weight: bold;
-    color: white;
-    text-overflow: inherit;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-transform: uppercase;
+  font-size: 4.5rem;
+  font-weight: bold;
+  color: white;
+  text-overflow: inherit;
 }
 
-.hero-text>div:nth-of-type(3) {
-    font-size: 1rem;
-    font-weight: 200;
-    text-transform: none;
-    letter-spacing: 1px;
-    width: 80%;
+.hero-text > div:nth-of-type(3) {
+  font-size: 1rem;
+  font-weight: 200;
+  text-transform: none;
+  letter-spacing: 1px;
+  width: 80%;
 }
 
 .figures {
-    display: flex;
-    gap: 2rem;
+  display: flex;
+  gap: 2rem;
 }
 
-.figures>div {
-    display: flex;
-    flex-direction: column;
+.figures > div {
+  display: flex;
+  flex-direction: column;
 }
 
-.figures>div>span:nth-of-type(1) {
-    color: white;
-    font-size: 2rem;
+.figures > div > span:nth-of-type(1) {
+  color: white;
+  font-size: 2rem;
 }
 
-.figures>div>span:nth-of-type(2) {
-    color: var(--gray);
-    text-transform: uppercase;
+.figures > div > span:nth-of-type(2) {
+  color: var(--gray);
+  text-transform: uppercase;
 }
 
 .hero-buttons {
-    display: flex;
-    gap: 1rem;
-    font-weight: normal;
+  display: flex;
+  gap: 1rem;
+  font-weight: normal;
 }
 
-.hero-buttons>:nth-child(1) {
-    
+.hero-buttons > :nth-child(1) {
+  color: white;
+  background-color: var(--orange);
+  width: 8rem;
+}
+
+.hero-buttons > :nth-child(2) {
+  color: white;
+  background-color: transparent;
+  width: 8rem;
+  border: 2px solid var(--orange);
+}
+
+/* Hover effect for both buttons */
+.hero-buttons > :nth-child(1):hover,
+.hero-buttons > :nth-child(2):hover {
+  border: 2px solid var(--orange);
+  background-color: transparent; /* Swap background color */
+}
+
+.hero-buttons > :nth-child(1):hover ~ :nth-child(2),
+.hero-buttons > :nth-child(2):hover ~ :nth-child(1) {
+  background-color: var(--orange); /* Swap background color */
+}
+
+.right > .btn {
+  position: absolute;
+  right: 3rem;
+  top: 2rem;
+  color: black;
+  border-radius: 5px;
+}
+
+
+.hero-image {
+  position: absolute;
+  top: 8rem;
+  right: 12rem;
+  width: 23rem;
+}
+
+.hero-image-bg {
+  position: absolute;
+  z-index: -1;
+  right: 24rem;
+  top: 2rem;
+  width: 15rem;
 }
