--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   --gray: #9c9c9c;
   --orange: #f48915;
   --darkGrey: #464d53;
-  --caloryCard: #656565;
+  --calorieCard: #656565;
   --planCard: linear-gradient(210.41deg, #fa5042 1.14%, #ffa739 100.75%);
   --appColor: #3c3f45;
 }
