--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,7 +4,10 @@
 }
 
 .logo {
-    width: 10rem;
+    width: 200px;
+    height: 20px;
+    margin-left: 0.5rem;
+    margin-top: 1.5rem;
 }
 
 .header-menu {
