--- a/src/components/Plans/plans.css
+++ b/src/components/Plans/plans.css
@@ -80,4 +80,17 @@
   width: 1rem;
 }
 
+.plans-blur-1 {
+  width: 32rem;
+  height: 23rem;
+  top: 6rem;
+  left: 0rem;
+}
+
+.plans-blur-2 {
+  width: 32rem;
+  height: 23rem;
+  top: 10rem;
+  right: 0rem;
+}
 
