--- a/src/components/Reasons/reasons.css
+++ b/src/components/Reasons/reasons.css
@@ -14,13 +14,14 @@
 
 .reasons-left > img {
   object-fit: cover;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: 0.01s ease-in;
+  filter: grayscale(100%);
 }
-/* 
+ 
 .reasons-left > img:hover {
-  transform: scale(1.3);
-  box-shadow: 0px 0px 8px rgb(180, 171, 171);
-} */
+  filter: grayscale(0%);
+}
+
 
 .reasons-left > :nth-child(1) {
   width: 12rem;
